--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="manifest" href="manifest.json">
     <meta name="theme-color" content="#3b82f6">
-    <link rel="icon" href="icons/icon-192.png" sizes="192x192">
+    <link rel="icon" href="WhatsApp_Image_2025-10-08_at_20.11.45_c322dc16-removebg-preview.png" sizes="192x192">
     <style>
         /* Logo Styling */
         .sidebar-logo, .header-logo {
