--- a/index.html
+++ b/index.html
@@ -9,16 +9,15 @@
     <meta name="theme-color" content="#3b82f6">
     <link rel="icon" href="WhatsApp_Image_2025-10-08_at_20.11.45_c322dc16-removebg-preview.png" sizes="192x192">
     <style>
-        /* Logo Styling */
+        /* --- Logo Styling --- */
         .sidebar-logo, .header-logo {
             display: flex;
             align-items: center;
             justify-content: center;
-            background-color: #3b82f6;
-            color: white;
-            font-weight: bold;
-            font-size: 1.25rem;
-            border-radius: 8px;
+        }
+
+        .sidebar-logo img, .header-logo img {
+            display: block;
         }
 
         .sidebar-logo {
@@ -43,7 +42,7 @@
             color: #f8fafc;
         }
 
-        /* Main header logo */
+        /* Main header */
         .main-header {
             display: flex;
             align-items: center;
@@ -61,177 +60,190 @@
             gap: 12px;
             font-size: 1.25rem;
         }
+
+        /* Menu toggle button */
+        .menu-toggle {
+            background: none;
+            border: none;
+            color: white;
+            cursor: pointer;
+            font-size: 1.5rem;
+        }
     </style>
 </head>
 <body>
 
-    <div id="overlay" class="overlay"></div>
+<div id="overlay" class="overlay"></div>
 
-    <div class="app-container">
-        <aside class="sidebar" id="sidebar">
-            <div class="sidebar-header">
-                <!-- Sidebar Logo -->
-                <div class="sidebar-logo">
-                    EMS
-                </div>
-                <span>Election Monitoring</span>
+<div class="app-container">
+    <aside class="sidebar" id="sidebar">
+        <div class="sidebar-header">
+            <!-- Sidebar Logo -->
+            <div class="sidebar-logo">
+                <img src="WhatsApp_Image_2025-10-08_at_20.11.45_c322dc16-removebg-preview.png" alt="EMS Logo">
             </div>
-            <nav>
-                <ul class="sidebar-nav">
-                    <li class="nav-item">
-                        <a href="#" onclick="showSection('dashboard', this)">
-                            <span>Dashboard</span>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="#" onclick="showSection('report', this)">
-                            <span>Report Issue</span>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="#" onclick="showSection('results', this)">
-                            <span>Transparency Hub</span>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="#" onclick="showSection('verify', this)">
-                            <span>Voter Verification</span>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="#" onclick="showSection('track', this)" class="active">
-                            <span>Track Complaints</span>
-                        </a>
-                    </li>
+            <span>Election Monitoring</span>
+        </div>
+        <nav>
+            <ul class="sidebar-nav">
+                <li class="nav-item">
+                    <a href="#" onclick="showSection('dashboard', this)">
+                        <span>Dashboard</span>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" onclick="showSection('report', this)">
+                        <span>Report Issue</span>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" onclick="showSection('results', this)">
+                        <span>Transparency Hub</span>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" onclick="showSection('verify', this)">
+                        <span>Voter Verification</span>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" onclick="showSection('track', this)" class="active">
+                        <span>Track Complaints</span>
+                    </a>
+                </li>
+            </ul>
+        </nav>
+    </aside>
+
+    <main class="main-content">
+        <header class="main-header">
+            <h1>
+                <!-- Header Logo -->
+                <img src="WhatsApp_Image_2025-10-08_at_20.11.45_c322dc16-removebg-preview.png" alt="EMS Logo" class="header-logo">
+                Election Monitoring System
+            </h1>
+            <button class="menu-toggle" id="menu-toggle">&#9776;</button>
+        </header>
+
+        <!-- Track Section -->
+        <section id="track" class="active">
+            <h2 class="page-title">Track Complaints</h2>
+            <div class="card">
+                <div class="input-with-button">
+                    <input type="text" id="trackId" placeholder="e.g. CMP-2025-0089">
+                    <button onclick="trackComplaint()">Track</button>
+                </div>
+                <p id="trackMsg" style="margin-top: 15px;"></p>
+            </div>
+            
+            <div class="card">
+                <h3>Recently Submitted Issues</h3>
+                <div class="table-container">
+                    <table class="complaints-table">
+                        <thead>
+                            <tr>
+                                <th>Complaint ID</th>
+                                <th>Role</th>
+                                <th>Issue Type</th>
+                                <th>Status</th>
+                                <th>Description</th>
+                            </tr>
+                        </thead>
+                        <tbody id="complaintsTableBody"></tbody>
+                    </table>
+                </div>
+            </div>
+        </section>
+
+        <!-- Dashboard Section -->
+        <section id="dashboard">
+            <h2 class="page-title">Dashboard</h2>
+            <div class="card">
+                <h3>Problems Identified:</h3>
+                <ul>
+                    <li>Fraud or malpractice</li>
+                    <li>Misinformation / Fake news</li>
+                    <li>Lack of transparency</li>
+                    <li>Difficulty reporting issues</li>
+                    <li>Duplicate / fraudulent voters</li>
                 </ul>
-            </nav>
-        </aside>
+            </div>
+            <div class="card">
+                <h3>Solutions This System Provides:</h3>
+                <ul>
+                    <li>Centralized issue reporting & tracking</li>
+                    <li>Verified complaint IDs</li>
+                    <li>Live results & transparency hub</li>
+                    <li>Voter verification tool</li>
+                    <li>Digital reporting channels</li>
+                </ul>
+            </div>
+        </section>
 
-        <main class="main-content">
-            <header class="main-header">
-                <h1>
-                    <!-- Header Logo -->
-                    <div class="header-logo">EMS</div>
-                    Election Monitoring System
-                </h1>
-                <button class="menu-toggle" id="menu-toggle">&#9776;</button>
-            </header>
-
-            <!-- Sections remain unchanged -->
-            <section id="track" class="active">
-                <h2 class="page-title">Track Complaints</h2>
-                <div class="card">
-                    <div class="input-with-button">
-                        <input type="text" id="trackId" placeholder="e.g. CMP-2025-0089">
-                        <button onclick="trackComplaint()">Track</button>
-                    </div>
-                    <p id="trackMsg" style="margin-top: 15px;"></p>
-                </div>
-                
-                <div class="card">
-                    <h3>Recently Submitted Issues</h3>
-                    <div class="table-container">
-                        <table class="complaints-table">
-                            <thead>
-                                <tr>
-                                    <th>Complaint ID</th>
-                                    <th>Role</th>
-                                    <th>Issue Type</th>
-                                    <th>Status</th>
-                                    <th>Description</th>
-                                </tr>
-                            </thead>
-                            <tbody id="complaintsTableBody"></tbody>
-                        </table>
-                    </div>
-                </div>
-            </section>
-
-            <section id="dashboard">
-                <h2 class="page-title">Dashboard</h2>
-                <div class="card">
-                    <h3>Problems Identified:</h3>
-                    <ul>
-                        <li>Fraud or malpractice</li>
-                        <li>Misinformation / Fake news</li>
-                        <li>Lack of transparency</li>
-                        <li>Difficulty reporting issues</li>
-                        <li>Duplicate / fraudulent voters</li>
-                    </ul>
-                </div>
-                <div class="card">
-                    <h3>Solutions This System Provides:</h3>
-                    <ul>
-                        <li>Centralized issue reporting & tracking</li>
-                        <li>Verified complaint IDs</li>
-                        <li>Live results & transparency hub</li>
-                        <li>Voter verification tool</li>
-                        <li>Digital reporting channels</li>
-                    </ul>
-                </div>
-            </section>
-
-            <section id="report">
-                <h2 class="page-title">Report an Election Issue</h2>
-                <div class="card">
-                    <form id="issueForm">
-                        <div class="form-group">
-                            <label for="role">Your Role:</label>
-                            <select id="role" required>
-                                <option value="">Select a Role</option>
-                                <option>Citizen/Voter</option>
-                                <option>Observer</option>
-                                <option>Election Official</option>
-                            </select>
-                        </div>
-                        <div class="form-group">
-                            <label for="issueType">Issue Type:</label>
-                            <select id="issueType" required>
-                                <option value="">Select an Issue</option>
-                                <option>Fraud</option>
-                                <option>Misinformation</option>
-                                <option>Lack of Transparency</option>
-                                <option>Duplicate Voter</option>
-                                <option>Other</option>
-                            </select>
-                        </div>
-                        <div class="form-group">
-                            <label for="details">Details:</label>
-                            <textarea id="details" rows="4" required placeholder="Provide a detailed description of the issue..."></textarea>
-                        </div>
-                        <button type="submit">Submit Complaint</button>
-                    </form>
-                </div>
-            </section>
-
-            <section id="results">
-                <h2 class="page-title">Transparency Hub – Live Results</h2>
-                <div class="card">
-                    <p><strong>Mock Data (for demonstration purposes)</strong></p>
-                    <ul>
-                        <li>Candidate A – 45%</li>
-                        <li>Candidate B – 40%</li>
-                        <li>Candidate C – 15%</li>
-                    </ul>
-                </div>
-            </section>
-
-            <section id="verify">
-                <h2 class="page-title">Voter Verification</h2>
-                <div class="card">
+        <!-- Report Section -->
+        <section id="report">
+            <h2 class="page-title">Report an Election Issue</h2>
+            <div class="card">
+                <form id="issueForm">
                     <div class="form-group">
-                        <label for="voterId">Enter Voter ID:</label>
-                        <input type="text" id="voterId" placeholder="Enter voter ID">
+                        <label for="role">Your Role:</label>
+                        <select id="role" required>
+                            <option value="">Select a Role</option>
+                            <option>Citizen/Voter</option>
+                            <option>Observer</option>
+                            <option>Election Official</option>
+                        </select>
                     </div>
-                    <button onclick="verifyVoter()">Verify</button>
-                    <p id="verifyMsg" style="margin-top: 15px;"></p>
+                    <div class="form-group">
+                        <label for="issueType">Issue Type:</label>
+                        <select id="issueType" required>
+                            <option value="">Select an Issue</option>
+                            <option>Fraud</option>
+                            <option>Misinformation</option>
+                            <option>Lack of Transparency</option>
+                            <option>Duplicate Voter</option>
+                            <option>Other</option>
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <label for="details">Details:</label>
+                        <textarea id="details" rows="4" required placeholder="Provide a detailed description of the issue..."></textarea>
+                    </div>
+                    <button type="submit">Submit Complaint</button>
+                </form>
+            </div>
+        </section>
+
+        <!-- Results Section -->
+        <section id="results">
+            <h2 class="page-title">Transparency Hub – Live Results</h2>
+            <div class="card">
+                <p><strong>Mock Data (for demonstration purposes)</strong></p>
+                <ul>
+                    <li>Candidate A – 45%</li>
+                    <li>Candidate B – 40%</li>
+                    <li>Candidate C – 15%</li>
+                </ul>
+            </div>
+        </section>
+
+        <!-- Verify Section -->
+        <section id="verify">
+            <h2 class="page-title">Voter Verification</h2>
+            <div class="card">
+                <div class="form-group">
+                    <label for="voterId">Enter Voter ID:</label>
+                    <input type="text" id="voterId" placeholder="Enter voter ID">
                 </div>
-            </section>
-        </main>
-    </div>
+                <button onclick="verifyVoter()">Verify</button>
+                <p id="verifyMsg" style="margin-top: 15px;"></p>
+            </div>
+        </section>
+    </main>
+</div>
 
-    <div id="notification"></div>
+<div id="notification"></div>
 
-    <script src="script.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
